# graphdb-agent

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: 0_general_q&a_on_design_choices.md  1_how_many_question_should_I_add.md  2_how_tocurate_good_sample_questions.md  3_semantic_starfish_example.md  4_how_to_create_starfish_questions.md  5_how_to_define_business_rules.md  6_when_to_use_few_shot_examples.md  7_han_embedding_logic.md
schemas/: _global_join_paths.yaml  _global_sample_questions.yaml  customers.yaml  orders.yaml  products.yaml  suppliers.yaml
src/graphdb_agent/: agent.py  config.py  generate_starfish_questions.py  graph_builder.py  lemmatization.py  prompt_engine.py  retriever.py  retriever_wip.py  semantic.py  z_snippets.py
